project/logs/20250801_142222.log
Using adapter: NVIDIA GeForce RTX 4060 Laptop GPU

Feature Level: 12.2

Complete create D3D12Device!
Begin CompileShader, pathObject3D.VS.hlsl,profile:vs_6_0

Complete CompileShader, pathObject3D.VS.hlsl,profile:vs_6_0

Begin CompileShader, pathObject3D.PS.hlsl,profile:ps_6_0

Qembed_debug:38:12: warning: implicit truncation of vector type [-Wconversion]
    float3 transformedUV = mul(float32_t4(input.texcoord,0.0f, 1.0f), gMaterial.uvTransform);
           ^
Qembed_debug:44:34: error: use of undeclared identifier 'normal'
    float lambert = saturate(dot(normal, lightDir));
                                 ^
Qembed_debug:44:42: error: use of undeclared identifier 'lightDir'
    float lambert = saturate(dot(normal, lightDir));
                                         ^
Qembed_debug:45:9: error: use of undeclared identifier 'material'; did you mean 'gMaterial'?
    if (material.useHalfLambert == 1)
        ^~~~~~~~
        gMaterial
Qembed_debug:15:26: note: 'gMaterial' declared here
ConstantBuffer<Material> gMaterial : register(b0);
                         ^

Complete CompileShader, pathObject3D.PS.hlsl,profile:ps_6_0

Application terminating.
WSTRINGHello, DirectX!

